<resources>
    <string name="app_name">Audio Player</string>
    <string name="title_songs">Songs</string>
    <string name="title_albums">Albums</string>
    <string name="title_artists">Artists</string>
    <string name="amount_of_songs"> %1$s Songs</string>
    <string name="amount_of_albums"> %1$s Albums</string>
    <string name="intent_key_album_name">album_name</string>
    <string name="intent_key_album_name_data">album_name_data</string>
    <string name="intent_key_artist_name">artist_name</string>
    <string name="intent_key_artist_name_data">artist_name_data</string>
    <string name="song_item_id_key">song_item_id</string>
    <string name="action_previous">PREVIOUS</string>
    <string name="action_play">PLAY</string>
    <string name="action_next">NEXT</string>
    <string name="action_pause">PAUSE</string>
    <string name="song_start_time">00:00</string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="saved_devices">Saved devices:</string>
    <string name="available_devices">Available devices:</string>
    <string name="no_available_devices">No available devices!</string>
    <string name="bluetooth_pair_text">Pair</string>
    <string name="bluetooth_unpair_text">Unpair</string>
    <string name="bluetooth_pairing_text">Pairing...</string>
</resources>