<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_songs">

    <fragment
        android:id="@+id/navigation_songs"
        android:name="com.example.audioplayer.fragments.SongsFragment"
        android:label="@string/title_songs"
        tools:layout="@layout/fragment_songs" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.example.audioplayer.fragments.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.example.audioplayer.fragments.ArtistsFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_artists" />
</navigation>